<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/custom_btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_1" />

    <Button
        android:id="@+id/custom_btn_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_2" />

    <Button
        android:id="@+id/custom_btn_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_3" />

    <Button
        android:id="@+id/custom_btn_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_4" />

    <Button
        android:id="@+id/custom_btn_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_5" />

</LinearLayout>
